--- a/src/main/resources/templates/Template.html
+++ b/src/main/resources/templates/Template.html
@@ -246,6 +246,11 @@
     </div>
 
 
+    <div th:if="${PageName == 'FacultyEditSubject'}">
+      <div th:replace="~{Fragments/FacultyFragments :: FacultyEditSubject}"></div>
+    </div>
+
+
 
   </section>
   <section id="footer">
