--- a/src/main/resources/templates/Fragments/StudentFragments.html
+++ b/src/main/resources/templates/Fragments/StudentFragments.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="profilePicB row mt-1 mb-2">
                     <div class="col-6 text-center">
-                        <a th:href="@{/student/profile/removeProfilePic(pId= ${currentUser.ProfilePic.id})}" class="btn btn-danger">Remove</a>
+                        <a th:href="@{/student/profile/removeProfilePic(pId= ${currentUser.profilePic.id})}" class="btn btn-danger">Remove</a>
                     </div>
                     <div class="col-6 text-center">
                         <button type="submit" class="btn btn-primary">Update</button>
@@ -64,39 +64,28 @@
                     </div>
                     <div class="form-floating mb-3">
                         <input type="email" class="form-control" id="email" placeholder="name@example.com" th:field="*{email}" readonly>
-                        <label for="email">Email your email</label>
+                        <label for="email">your email</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="age" placeholder="000" th:field="*{age}">
-                        <label for="age">Email your age</label>
+                        <label for="age">your age</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="date" class="form-control" id="bdate" placeholder="00/0/0000" th:field="*{birthdate}">
-                        <label for="bdate">Email your birth date</label>
+                        <label for="bdate">your birth date</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="city" placeholder="mumbai" th:field="*{city}">
-                        <label for="city">Email your city</label>
+                        <label for="city">your city</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="state" placeholder="maharashtra" th:field="*{state}">
-                        <label for="state">Email your state</label>
+                        <label for="state">your state</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="address" placeholder="something" th:field="*{address}">
-                        <label for="address">Email your address</label>
+                        <label for="address">your address</label>
                     </div>
-<!--                    <select class="form-select mb-2" aria-label="Default select example" name="department" th:field="*{department}">-->
-<!--                        <option th:value="Select_Year" selected>Select Department</option>-->
-<!--                        <option th:value="Information_Technology">Information Technology</option>-->
-<!--                        <option th:value="Computer_Science_Engineering">Computer Science and Engineering</option>-->
-<!--                        <option th:value="Civil_Engineering">Civil Engineering</option>-->
-<!--                        <option th:value="Mechanical_Engineering">Mechanical Engineering</option>-->
-<!--                        <option th:value="Electrical_Engineering">Electrical Engineering</option>-->
-<!--                        <option th:value="Electronics_Engineering">Electronics Engineering</option>-->
-
-<!--                    </select>-->
-
                     <select class="form-select mb-2" aria-label="Default select example" name="studyYear" th:field="*{course}">
                         <option th:value="Select_Year" selected>Select course</option>
                         <option th:value="First_Year">First Year</option>
@@ -120,21 +109,67 @@
                     <button type="submit" class="btn btn-primary w-50">Update</button>
                 </div>
             </form>
-            <p class="text-center m-1"><a class="text-decoration-none text-danger" href="">Password Update</a></p>
+            <p class="text-center m-1"><a class="text-decoration-none text-danger" th:href="@{/student/passwordUpdate}">Password Update</a></p>
         </div>
     </div>
     <div th:replace="~{Fragments/StudentFragments :: StudentMenu}"></div>
     <div class="container rounded border border-1 border-dark p-2 mt-2">
         <h3 class="text-center text-dark">DEPARTMENT DETAILS</h3>
         <div >
-            <p class="m-1">Department Name : <a class="text-decoration-none text-danger" href="">Password Update</a></p>
-            <p class="m-1">Head Of The Department : <a class="text-decoration-none text-danger" href="">Password Update</a></p>
-            <p class="m-1">Class Teacher : <a class="text-decoration-none text-danger" href="">Password Update</a></p>
+            <p class="m-1">Department Name : <a class="text-decoration-none text-dark" href="" th:text="${currentUser.department}">Password Update</a></p>
+            <p class="m-1">Head Of The Department : <a class="text-decoration-none text-dark" href="">Password Update</a></p>
+            <p class="m-1">Class Teacher : <a class="text-decoration-none text-dark" href="" th:text="${currentUser.faculty.name}">Password Update</a></p>
 
         </div>
     </div>
 </div>
 <!--Student Profile Fragment End-->
+
+
+
+
+
+<!--Student Password fragment Start-->
+<div class="divContainer m-4 p-3" th:fragment="StudentPassUpdate">
+    <div class="m-1">
+        <h5 class="text-primary text-center">Password Update</h5>
+    </div>
+
+
+    <div class="profileForm row">
+        <div class="col-md-8 offset-md-2 mb-2">
+            <form th:action="@{/student/passwordUpdate/process}"  method="post" enctype="multipart/form-data">
+                <div class="form-floating mb-3 mt-3 ">
+                    <input type="text" class="form-control" id="password_old" placeholder="Enter current password"
+                           name="Password_old">
+                    <label for="password_old">Current password :</label>
+                </div>
+                <div class="form-floating mb-3 mt-3 ">
+                    <input type="password" class="form-control" id="password_new" placeholder="Enter password"
+                           name="Password_new">
+                    <label for="password_new">New password :</label>
+                    <p th:if="${password_error}" th:text="${password_error}"></p>
+                </div>
+                <div class="d-flex justify-content-center align-items-center">
+                    <button type="submit" class="myButton w-50">Submit</button>
+                </div>
+            </form>
+
+
+            <div th:if="${Match}">
+                <h4 class="text-success text-center">Password Updated Successfully</h4>
+                <p class="text-center text-dark">Go back to <a class="text-decoration-none text-primary" th:href="@{/student/profile}">Profile</a> page</p>
+            </div>
+            <div th:if="${NotMatch}">
+                <h4 class="text-danger text-center">Current Password did not match, try again..!</h4>
+            </div>
+        </div>
+        <hr>
+        <div th:replace="~{Fragments/FacultyFragments :: FacultyMenu}"></div>
+
+    </div>
+</div>
+<!--Faculty Password fragment End-->
 
 
 
